@@ -177,9 +177,14 @@ ADMIN_TOOLS_APP_INDEX_DASHBOARD = 'generic_app.dashboard.CustomAppIndexDashboard
 
 
 # Avatar
-AUTO_GENERATE_AVATAR_SIZES = (80, 100, 200)
+AVATAR_DEFAULT_SIZE = 150
+AUTO_GENERATE_AVATAR_SIZES = (150, 250)
 AVATAR_GRAVATAR_BACKUP = False
-AVATAR_DEFAULT_URL = '%s/images/user.png' % MEDIA_URL
+AVATAR_DEFAULT_URL = 'images/user.png'
+AVATAR_ALLOWED_FILE_EXTS = ('.jpg', '.png')
+AVATAR_MAX_AVATARS_PER_USER = 5
+AVATAR_HASH_FILENAMES = True
+
 
 # Django-Compressor
 COMPRESS = True
