@@ -31,7 +31,7 @@
  
 	<div class="col50 f-right">
 		<div class="t-center">
-			{% avatar request.user 200 %}
+			{% avatar request.user 250 %}
 		</div> <!-- /t-center -->
 	</div> <!-- /col50 -->
 
