@@ -32,7 +32,7 @@
  
 	<div class="col50 f-right">
 		<div class="t-center">
-			{% avatar profile.register_number 200 %}
+			{% avatar profile.register_number 250 %}
 		</div> <!-- /t-center -->
 	</div> <!-- /col50 -->
 
