@@ -24,7 +24,7 @@
 	</td>
 	<td style="vertical-align:middle; text-align:center; width: 35%;">
 		<a href="{% url display_profile profile.register_number %}">
-        	{% avatar profile.user 150 %}
+        	{% avatar profile.user %}
 		</a>
 	</td>
 	</tr>
