@@ -1,3 +1,4 @@
+Version 39 	 2010-08-12 	 Making Course and Year of Joining in profile as optional 
 Version 38 	 2010-08-12 	 Minor cosmetic changes in submenu 
 Version 37 	 2010-08-12 	 Added 'Browse by Batch' 
 Version 36 	 2010-08-12 	 another small change to fabfile 
